Version 16.99 - 20 May 2015

- bootloader:
  o do not detect grub2 on UEFI when there's no bootloader
  o fix default grub2 kernel parameters (mga#15984)
- partitioning:
  o display cosmetics when reading back GPT partitions
  o fix mnt point for FAT partitions on GTP (mga#15987)
  o set the proper GUID for FAT partitions on GPT
- don't try to install non existant scim-googlepinyin (mga#6681)

Version 16.97 - 18 May 2015

(just to be sure draklive-install fix for mga15257 doesn't break anything)

Version 16.96 - 17 May 2015

- partitioning:
  o fix regression refusing FAT for ESP (mga#15962)

Version 16.95 - 14 May 2015

- better dialog title (mga#9648)
- partitioning:
  o fix a crash after "insufficient space" error (mga#15919)

Version 16.93 - 9 May 2015

- bootloader:
  o do use vga value for grub2
  o fix setting default grub2 entry

Version 16.92 - 9 May 2015

- bootloader:
  o backup grub2 files before configuring
- always log update-grub2 output (mga#15857)
- networking:
  o recognize r8723bs (mga#15874)
- partitioning:
  o do not set noauto for /boot/EFI (mga#15627)

Version 16.90 - 28 April 2015

- localedrake:
  o write input methods to /etc/locale.conf (mga#15464)
- run vgchange before updating the list of LVMs, not after, and even if not
  in install (should help with mga#7578).

Version 16.89 - 25 April 2015

- Ignore special partitions on mmc (mga#15759)

Version 16.87 - 21 April 2015

- partitioning:
  o improve the display box (mga#15728)

Version 16.86 - 20 April 2015

- bootloader:
  o dont override 'splash' and/or 'quiet' when adding 'noiswmd' (mga#15666)
- partitioning:
  o use the windows partition with the most available space on current
    disk, not the last one across all disks (mga#15589)
  o suggest up to 20GB/20% of the windows partition (whichever is larger),
    previously 6GB/10% (mga#15589)
  o hide empty space < 2MB, we have such holes due to alignment (mga#15733)
- speed up reading of flags from GPT partition table (mga#15621).
