@@ -1,3 +1,5 @@
+- add online media at installation end (mga#8819)
+
 Version 16.99 - 20 May 2015
 
 - bootloader:
